--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -1,2 +1,190 @@
-<h1>Customizer#index</h1>
-<p>Find me in app/views/customizer/index.html.erb</p>
+<html>
+<!-- 
+
+References:
+http://stackoverflow.com/questions/121817/replace-text-inside-a-div-element
+http://stackoverflow.com/questions/8664995/delay-each-iteration-of-loop-by-a-certain-time
+http://stackoverflow.com/questions/5146805/an-iframe-i-need-to-refresh-every-30-seconds-but-not-the-whole-page
+http://stackoverflow.com/questions/10328210/javascriptdiv-appendchild
+http://stackoverflow.com/questions/14680314/css-how-to-make-a-list-wrap-vertically
+http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-JavaScript
+-->
+<head>
+<style type="text/css">
+.CounterDigits { clear: left; position: relative; margin: 0; width:20px; padding: 0; background-color:red; height:20px;}
+
+.masonry {
+  background: #EEE;
+  max-width: 640px;
+}
+
+#test {
+  background: #EEE;
+  max-width: 640px;
+}
+
+#test .item,
+#test .grid-sizer {
+  width:  60px;
+  height: 60px;
+  background: #D26;
+  border: 2px solid #333;
+}
+
+.masonry .item,
+.masonry .grid-sizer {
+  width:  60px;
+  height: 60px;
+  background: #D26;
+  border: 2px solid #333;
+}
+</style>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://static.tumblr.com/5hz4lzv/uz8mp1mr1/masonry.pkgd.min.js"></script>
+<script src="http://welcome.totheinter.net/autocolumn/autocolumn.js"></script>
+<script>
+$(function(){
+			$('#test').columnize({width:180});
+		});
+/* JavaScript was chosen for the counter because of its asyncronous page updating capabilities */
+ActivateCounterSwitch = false;
+Counter=0;
+function test5() {
+if (ActivateCounterSwitch == true) {ActivateCounterSwitch = false}
+else if (ActivateCounterSwitch == false) {ActivateCounterSwitch = true}
+}
+window.setInterval("IncreaseItemsList()", 100);
+
+function IncreaseItemsList() {
+if (ActivateCounterSwitch == true) {
+var MinimumColumnHeightUserInput = $('input#MinimumColumnHeight').val();
+var MaximumNumberOfColumnsUserInput = $('input#MaximumNumberOfColumns').val();
+Counter++;
+var iDiv = document.createElement('div');
+iDiv.innerHTML=Counter;
+iDiv.className='CounterDigits';
+document.getElementById('container').appendChild(iDiv);
+/*if (Counter==3) {
+$('div#container').css({height:($('div#container').height()-19)+'px'})
+}
+else if(Counter==6){
+$('div#container').css({height:($('div#container').height()-19)+'px'})
+}
+else if(Counter==9){
+$('div#container').css({height:($('div#container').height()-19)+'px'})
+}*/
+/* Set width */
+/*$('div#container').css({"max-width":(MaximumNumberOfColumns*100)+'px'});*/
+/* Set height */
+
+/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
+var adjustedMinimumColumnHeight = (2*(20*MaximumNumberOfColumnsUserInput)) - (Math.floor(Counter/MinimumColumnHeightUserInput)*20);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
+}
+else {
+var adjustedMinimumColumnHeight = (2*(20*MaximumNumberOfColumnsUserInput)) - (MaximumNumberOfColumnsUserInput*20) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*20);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
+}*/
+
+/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
+var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (Math.floor(Counter/MaximumNumberOfColumnsUserInput)*21);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
+}
+else {
+var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (MaximumNumberOfColumnsUserInput*21) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*21);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
+}*/
+
+/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
+var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (Math.floor(Counter/MaximumNumberOfColumnsUserInput)*21);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
+}
+else {
+var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (MaximumNumberOfColumnsUserInput*21) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*21);
+$('div#container').css({height:adjustedMinimumColumnHeight+'px'});*/
+
+
+/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)&Counter%MinimumColumnHeightUserInput==0) {
+$('div#container').css({height:($('div#container').height()-19)+'px'})
+}
+else if(Counter>(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)&(Counter-1)%3==0){
+$('div#container').css({height:($('div#container').height()+19)+'px'})
+}*/
+
+
+/*
+if ((Counter%MinimumColumnHeightUserInput==0)&(Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))) {
+$('div#container').css({height:(MinimumColumnHeightUserInput*20)+'px'});
+}
+else if ((Counter%(Math.floor(Counter/MinimumColumnHeightUserInput))==0)&(Counter<(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))) {
+$('div#container').css({height:($('div#container').height()+20)+'px'});
+}
+else if (Counter>(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
+$('div#container').css({height:((MinimumColumnHeightUserInput*20)+((Math.floor((Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MaximumNumberOfColumnsUserInput)+1)*20))+'px'});
+}
+*/
+}
+}
+$(function(){
+			$('#container').columnize({width:100, lastNeverTallest:true, balance: true});
+		});
+</script>
+</head>
+<body>
+<h1>Hello, Rails!</h1>
+Column Height:<input type="text" id="MinimumColumnHeight" value="3">
+<br>Number of Columns:<input type="text" id="MaximumNumberOfColumns" value="3">
+<br><a href="javascript:test5()">Run Counter</a>
+<div id="container" style="max-width:300px;background-color:#b0c4de;
+    height: 60px;">
+<!--    column-fill: balance;
+    column-width: 100px;
+    column-height: 40px;
+    column-gap: 0px;
+    -moz-column-fill: balance;
+    -moz-column-width: 100px;
+    -moz-column-height: 40px;
+    -moz-column-gap: 0px;
+    -webkit-column-fill: balance;
+    -webkit-column-width: 100px;
+    -webkit-column-height: 40px;
+    -webkit-column-gap: 0px;
+
+	-webkit-column-break-inside: avoid;
+	-moz-column-break-inside: avoid;
+	column-break-inside: avoid;-->  
+  <div class="CounterDigits">a</div>
+  <div class="CounterDigits">b</div>
+  <div class="CounterDigits">c</div>
+  <div class="CounterDigits">d</div></div>
+
+<h1>Masonry - columnWidth</h1>
+<!--div id="test" class="js-masonry" data-masonry-options='{ "columnWidth":30, "itemSelector": ".item", "containerStyle": null }'-->
+<div id="test" columnize="columns:2;">
+  <div class="grid-sizer">1</div>
+  <div class="item">2</div>
+  <div class="item w2 h2">3</div>
+  <div class="item h3">4</div>
+  <div class="item h2">5</div>
+  <div class="item w3">6</div>
+  <div class="item">7</div>
+  <div class="item">8</div>
+  <div class="item h2">9</div>
+  <div class="item w2 h3">10</div>
+  <div class="item">11</div>
+  <div class="item h2">12</div>
+  <div class="item">13</div>
+  <div class="item w2 h2">14</div>
+  <div class="item w2">15</div>
+  <div class="item">16</div>
+  <div class="item h2">17</div>
+  <div class="item">18</div>
+  <div class="item">19</div>
+  <div class="item h3">20</div>
+  <div class="item h2">21</div>
+  <div class="item">22</div>
+  <div class="item">23</div>
+  <div class="item h2">24</div>
+</div>
+</body>
