--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -1,5 +1,6 @@
 <html>
 <!-- 
+Site version 0.1
 
 References:
 http://stackoverflow.com/questions/121817/replace-text-inside-a-div-element
@@ -12,41 +13,10 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 <head>
 <style type="text/css">
 .CounterDigits { clear: left; position: relative; margin: 0; width:20px; padding: 0; background-color:red; height:20px;}
-
-.masonry {
-  background: #EEE;
-  max-width: 640px;
-}
-
-#test {
-  background: #EEE;
-  max-width: 640px;
-}
-
-#test .item,
-#test .grid-sizer {
-  width:  60px;
-  height: 60px;
-  background: #D26;
-  border: 2px solid #333;
-}
-
-.masonry .item,
-.masonry .grid-sizer {
-  width:  60px;
-  height: 60px;
-  background: #D26;
-  border: 2px solid #333;
-}
 </style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="http://static.tumblr.com/5hz4lzv/uz8mp1mr1/masonry.pkgd.min.js"></script>
-<script src="http://welcome.totheinter.net/autocolumn/autocolumn.js"></script>
 <script>
-$(function(){
-			$('#test').columnize({width:180});
-		});
 /* JavaScript was chosen for the counter because of its asyncronous page updating capabilities */
 ActivateCounterSwitch = false;
 Counter=0;
@@ -65,55 +35,7 @@ var iDiv = document.createElement('div');
 iDiv.innerHTML=Counter;
 iDiv.className='CounterDigits';
 document.getElementById('container').appendChild(iDiv);
-/*if (Counter==3) {
-$('div#container').css({height:($('div#container').height()-19)+'px'})
-}
-else if(Counter==6){
-$('div#container').css({height:($('div#container').height()-19)+'px'})
-}
-else if(Counter==9){
-$('div#container').css({height:($('div#container').height()-19)+'px'})
-}*/
-/* Set width */
-/*$('div#container').css({"max-width":(MaximumNumberOfColumns*100)+'px'});*/
-/* Set height */
 
-/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
-var adjustedMinimumColumnHeight = (2*(20*MaximumNumberOfColumnsUserInput)) - (Math.floor(Counter/MinimumColumnHeightUserInput)*20);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
-}
-else {
-var adjustedMinimumColumnHeight = (2*(20*MaximumNumberOfColumnsUserInput)) - (MaximumNumberOfColumnsUserInput*20) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*20);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
-}*/
-
-/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
-var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (Math.floor(Counter/MaximumNumberOfColumnsUserInput)*21);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
-}
-else {
-var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (MaximumNumberOfColumnsUserInput*21) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*21);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
-}*/
-
-/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
-var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (Math.floor(Counter/MaximumNumberOfColumnsUserInput)*21);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});
-}
-else {
-var adjustedMinimumColumnHeight = (2*(21*MinimumColumnHeightUserInput)) - (MaximumNumberOfColumnsUserInput*21) + (((Math.floor(Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MinimumColumnHeightUserInput)+1)*21);
-$('div#container').css({height:adjustedMinimumColumnHeight+'px'});*/
-
-
-/*if (Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)&Counter%MinimumColumnHeightUserInput==0) {
-$('div#container').css({height:($('div#container').height()-19)+'px'})
-}
-else if(Counter>(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)&(Counter-1)%3==0){
-$('div#container').css({height:($('div#container').height()+19)+'px'})
-}*/
-
-
-/*
 if ((Counter%MinimumColumnHeightUserInput==0)&(Counter<=(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))) {
 $('div#container').css({height:(MinimumColumnHeightUserInput*20)+'px'});
 }
@@ -123,12 +45,9 @@ $('div#container').css({height:($('div#container').height()+20)+'px'});
 else if (Counter>(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput)) {
 $('div#container').css({height:((MinimumColumnHeightUserInput*20)+((Math.floor((Counter-(MinimumColumnHeightUserInput*MaximumNumberOfColumnsUserInput))/MaximumNumberOfColumnsUserInput)+1)*20))+'px'});
 }
-*/
+
 }
 }
-$(function(){
-			$('#container').columnize({width:100, lastNeverTallest:true, balance: true});
-		});
 </script>
 </head>
 <body>
@@ -137,8 +56,8 @@ Column Height:<input type="text" id="MinimumColumnHeight" value="3">
 <br>Number of Columns:<input type="text" id="MaximumNumberOfColumns" value="3">
 <br><a href="javascript:test5()">Run Counter</a>
 <div id="container" style="max-width:300px;background-color:#b0c4de;
-    height: 60px;">
-<!--    column-fill: balance;
+    height: 60px;
+    column-fill: balance;
     column-width: 100px;
     column-height: 40px;
     column-gap: 0px;
@@ -153,38 +72,5 @@ Column Height:<input type="text" id="MinimumColumnHeight" value="3">
 
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;-->  
-  <div class="CounterDigits">a</div>
-  <div class="CounterDigits">b</div>
-  <div class="CounterDigits">c</div>
-  <div class="CounterDigits">d</div></div>
-
-<h1>Masonry - columnWidth</h1>
-<!--div id="test" class="js-masonry" data-masonry-options='{ "columnWidth":30, "itemSelector": ".item", "containerStyle": null }'-->
-<div id="test" columnize="columns:2;">
-  <div class="grid-sizer">1</div>
-  <div class="item">2</div>
-  <div class="item w2 h2">3</div>
-  <div class="item h3">4</div>
-  <div class="item h2">5</div>
-  <div class="item w3">6</div>
-  <div class="item">7</div>
-  <div class="item">8</div>
-  <div class="item h2">9</div>
-  <div class="item w2 h3">10</div>
-  <div class="item">11</div>
-  <div class="item h2">12</div>
-  <div class="item">13</div>
-  <div class="item w2 h2">14</div>
-  <div class="item w2">15</div>
-  <div class="item">16</div>
-  <div class="item h2">17</div>
-  <div class="item">18</div>
-  <div class="item">19</div>
-  <div class="item h3">20</div>
-  <div class="item h2">21</div>
-  <div class="item">22</div>
-  <div class="item">23</div>
-  <div class="item h2">24</div>
-</div>
+	column-break-inside: avoid;"></div>
 </body>
