--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -12,7 +12,36 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 -->
 <head>
 <style type="text/css">
-.CounterDigits { clear: left; position: relative; margin: 0; width:20px; padding: 0; background-color:red; height:20px;}
+.CounterDigits { clear: left; position: relative; margin: 0; width:20px; padding: 0; height:20px;}
+
+.FloatingRectangleContentContainer {
+  color:#08233e;
+  width:225px;
+  font: Futura, 'Century Gothic', AppleGothic, sans-serif;
+  font-size:125%;
+  padding:14px;
+  background:#ffcc00;
+  background-color:#EBFCEC;
+  border:1px solid #00990D;
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
+  border-radius:10px;
+  border-bottom:1px solid #006B09;
+  -moz-box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+  -webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+  box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+  cursor:pointer;
+}
+
+.UpdateLayoutButton {
+font-size:110%;border:1px solid #8FA9FF;padding:3px;text-decoration: none;background: -webkit-gradient(linear, left top, left bottom, from(#F7F7F7), to(#D6D6D6));color:#08233e;
+}
+
+.TextInputBox {
+font-size:105%;
+width: 200px;
+text-align:center;
+}
 </style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -24,7 +53,7 @@ function test5() {
 if (ActivateCounterSwitch == true) {ActivateCounterSwitch = false}
 else if (ActivateCounterSwitch == false) {ActivateCounterSwitch = true}
 }
-window.setInterval("IncreaseItemsList()", 100);
+window.setInterval("IncreaseItemsList()", 300);
 
 function IncreaseItemsList() {
 if (ActivateCounterSwitch == true) {
@@ -50,12 +79,19 @@ $('div#container').css({height:((MinimumColumnHeightUserInput*20)+((Math.floor((
 }
 </script>
 </head>
-<body>
-<h1>Hello, Rails!</h1>
-Column Height:<input type="text" id="MinimumColumnHeight" value="3">
-<br>Number of Columns:<input type="text" id="MaximumNumberOfColumns" value="3">
-<br><a href="javascript:test5()">Run Counter</a>
-<div id="container" style="max-width:300px;background-color:#b0c4de;
+<body bgcolor="F5FAFF">
+<div style="position:absolute;width:100%;text-align:center;"><h1>Number Series Layout Customization</h1></div>
+<div style="position:absolute;left:5%;top:100px;">
+<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer">
+This web application generates a series of numbers when the "Start/Stop Counter" button is pressed.  The shape that the series of numbers forms can be customized by entering in numbers in the text boxes below, at any point when the counter is running a change in the number parameters will adjust the shape.  Refresh this page to reset the number series.
+</div>
+<br><br>
+<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer">
+Minimum Column Height:<br><input type="text" id="MinimumColumnHeight" value="3" class="TextInputBox">
+<br>Maximum Column Number:<br><input type="text" id="MaximumNumberOfColumns" value="3" class="TextInputBox">
+<br><br><a href="javascript:test5()" class="UpdateLayoutButton">Start/Stop Counter</a>
+</div>
+<div id="container" style="position:relative;left:100%;top:-625px;min-width:300px;
     height: 60px;
     column-fill: balance;
     column-width: 100px;
@@ -73,4 +109,5 @@ Column Height:<input type="text" id="MinimumColumnHeight" value="3">
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
 	column-break-inside: avoid;"></div>
+</div>
 </body>
