comments addded to the application

--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -1,6 +1,7 @@
 <html>
 <!-- 
-Site version 0.1
+Copyright Nate Sutton 2013
+Site version 1.0
 
 References:
 http://stackoverflow.com/questions/121817/replace-text-inside-a-div-element
