added link to github

--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -92,6 +92,8 @@ Minimum Column Height:<br><input type="text" id="MinimumColumnHeight" value="3" 
 <br>Maximum Column Number:<br><input type="text" id="MaximumNumberOfColumns" value="3" class="TextInputBox">
 <br><br><a href="javascript:test5()" class="UpdateLayoutButton">Start/Stop Counter</a>
 </div>
+<br><br>
+<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer"><a href="http://github.com/nmsutton/ColumnLayoutCustomizer"><img src="http://imageshack.us/scaled/large/38/githublink2.jpg" style=""></a></div>
 <div id="container" style="position:relative;left:100%;top:-625px;min-width:300px;
     height: 60px;
     column-fill: balance;
