--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -16,12 +16,12 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 -->
 
 <body bgcolor="F5FAFF">
-
 	<div style="position:absolute;width:100%;text-align:center;">
 		<h1>Number Series Layout Customization</h1>
 	</div>
+	<div id="NumberSeriesContainer"></div>
 	<div style="position:absolute;left:5%;top:100px;">
-		<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer">
+		<div style="text-align:center;" class="FloatingRectangleContentContainer">
 			This web application generates a series of numbers when the "Start/Stop Counter" button is
 			pressed.  The shape that the series of numbers forms can be customized by entering in numbers
 			in the text boxes below, at any point when the counter is running a change in the number
@@ -29,7 +29,7 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 		</div>
 		<br>
 		<br>
-		<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer">
+		<div style="text-align:center;" class="FloatingRectangleContentContainer">
 			Minimum Column Height:
 			<br>
 			<input type="text" id="MinimumColumnHeight" value="3" class="TextInputBox">
@@ -43,9 +43,8 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 		</div>
 		<br>
 		<br>
-		<div style="position:relative;text-align:center;" class="FloatingRectangleContentContainer">
+		<div style="text-align:center;" class="FloatingRectangleContentContainer">
 			<a href="http://github.com/nmsutton/ColumnLayoutCustomizer"> <img src="http://imageshack.us/scaled/large/38/githublink2.jpg" style=""></a>
 		</div>
-		<div id="NumberSeriesContainer"></div>
 	</div>
 </body>
