Added fix for old ie browser column support

--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -15,6 +15,11 @@ http://stackoverflow.com/questions/14680314/css-how-to-make-a-list-wrap-vertical
 http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-JavaScript
 -->
 
+<!-- The line below is included to help with older ie browser versions compatibility -->
+<!--[if lt IE 10]>
+      <%= javascript_include_tag "internetexplorercompatibility/css3-multi-column.js" %>
+<![endif]-->
+
 <body bgcolor="F5FAFF">
 	<div style="position:absolute;width:100%;text-align:center;">
 		<h1>Number Series Layout Customization</h1>
