--- a/app/views/customizer/index.html.erb
+++ b/app/views/customizer/index.html.erb
@@ -13,6 +13,7 @@ http://stackoverflow.com/questions/5146805/an-iframe-i-need-to-refresh-every-30-
 http://stackoverflow.com/questions/10328210/javascriptdiv-appendchild
 http://stackoverflow.com/questions/14680314/css-how-to-make-a-list-wrap-vertically
 http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-JavaScript
+http://stackoverflow.com/questions/9916936/css-vertical-align-middle
 -->
 
 <body bgcolor="F5FAFF">
@@ -20,8 +21,8 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 		<h1>Number Series Layout Customization</h1>
 	</div>
 	<div id="NumberSeriesContainer"></div>
-	<div style="position:absolute;left:5%;top:100px;">
-		<div style="text-align:center;" class="FloatingRectangleContentContainer">
+	<div style="position:absolute;left:65px;top:120px;">
+		<div class="FloatingRectangleContentContainer">
 			This web application generates a series of numbers when the "Start/Stop Counter" button is
 			pressed.  The shape that the series of numbers forms can be customized by entering in numbers
 			in the text boxes below, at any point when the counter is running a change in the number
@@ -29,7 +30,7 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 		</div>
 		<br>
 		<br>
-		<div style="text-align:center;" class="FloatingRectangleContentContainer">
+		<div class="FloatingRectangleContentContainer">
 			Minimum Column Height:
 			<br>
 			<input type="text" id="MinimumColumnHeight" value="3" class="TextInputBox">
@@ -43,7 +44,7 @@ http://www.webdeveloper.com/forum/showthread.php?173631-Set-DIV-height-with-Java
 		</div>
 		<br>
 		<br>
-		<div style="text-align:center;" class="FloatingRectangleContentContainer">
+		<div class="FloatingRectangleContentContainer">
 			<a href="http://github.com/nmsutton/ColumnLayoutCustomizer"> <img src="http://imageshack.us/scaled/large/38/githublink2.jpg" style=""></a>
 		</div>
 	</div>
