--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,5 +1,5 @@
 .CounterDigits {
-	position: relative;
+	float:left;
 	margin: 0;
 	width: 70px;
 	padding: 0;
@@ -9,7 +9,6 @@
 	vertical-align:middle;
 	line-height:50px;
 	text-align:center;
-	background-color: #006B09;
 	background-image: url(/assets/rectangle.png)
 }
 
@@ -48,18 +47,9 @@
 }
 
 #NumberSeriesContainer {
-	position: relative;
+	position: absolute;
 	left: 380px;
-	top: 100px;
-	width: 150px;
-	height: 60px;
-	column-count: 2;
-	-moz-column-count: 2;
-	-webkit-column-count: 2;
-	column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	-webkit-column-break-inside: avoid;
-	column-fill: auto;
-	-moz-column-fill: auto;
-	-webkit-column-fill: auto;
+	top: 110px;
+	width: 70px;
+	height: 50px;
 }
